--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -591,6 +591,7 @@ The user presses \& holds the \texttt{[B]} button on the controller to switch th
 %=========================================================================================================
 
 \subsection{Analogue selectable opacity}
+\label{analogue-selectable-opacity}
 The user pulls the right analogue trigger (\texttt{[RT]}) on the controller, where the position of the trigger maps directly to the opacity of the game objects that the camera feeds are rendered upon. The user can choose to stop at any intermediary position that suits their needs, keeping the level of opacity of the camera feeds at that position, as well as controlling the rate at which the visual stimuli from the default environment fade (by changing how quickly they change their depression of the trigger). Pulling the trigger all the way in displays only visual stimuli from the VR environment, while releasing it completely displays only visual stimuli from the default environment. The number of intermediary positions is limited only by the resolution of the trigger \& the encoding of the value.
 
 This method allows the user to superimpose VR visual stimuli upon default visual stimuli at any level that they wish. This is similar, but not identical, to AR, as instead of displaying a small number of virtual objects upon the user's view of their RW environment, a complete VR environment is superimposed upon the user's view of their RW environment. Figure \ref{scenario2} illustrates this scenario, while considering the combined model this method in essence allows the user to control the severity of the deflection upon the focus axis by altering the speed at which the oscillation upon the focus axis is performed to suit their disposition, the current environmental conditions, the task at hand, etc..
