--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -502,7 +502,7 @@ Further comparing head movements between the VR section of the traditional scena
 
 In general, participant reactions to the Mirrorshades platform met the hypotheses. From the questionnaire data \& interview transcripts, participants reported that they found the PR scenario to be both more enjoyable \& more rewarding than the traditional scenario, despite the decreased usability \& comfort effected by the requirement to don \& carry a satchel of hardware \& hold devices in both hands. The PR scenario was reported as allowing easier comparison \& contrast between RW \& VR environments, leading to recognising more differences between the two environments \& a greater change in \& better understanding of the chapel than with the traditional scenario. The visual acuity afforded by the cameras \& both the accuracy \& lag of the IPS surfaced as the major detractors to the experience of the PR scenario.
 
-From the log data, participants displayed restricted head movement throughout the PR scenario, looking to their sides \& above \& beneath themselves less when experiencing the VR chapel in the PR scenario than when experiencing the VR chapel in the traditional scenario. However this restriction does not appear to have been so great that it reduced the utility \& enjoyability of the PR scenario to beneath that of the traditional scenario.
+From the log data, participants displayed restricted head movement throughout the PR scenario, looking to their sides \& above \& beneath themselves less when experiencing the VR chapel in the PR scenario than when experiencing the VR chapel in the traditional scenario. While this restriction does not appear to have been so great that it reduced the utility \& enjoyability of the PR scenario to beneath that of the traditional scenario, it has been observed by other researchers~\cite{Slater1998} that there is a significant positive association between reported sense of presence in a VR environment \& the amount of body movement, particularly head yaw, displayed by a participant, so reducing the negative impact that a PR system has upon a user's willingness to freely look around them will likely result in beneficial returns.
 
 Through this first stage of evaluation the Mirrorshades platform has shown itself to be a rewarding new modality for experiencing VR content in a cultural heritage context, improving upon traditional techniques employed for the presentation of such content by allowing immediate comparison \& contrast between corresponding vantage points in both the RW \& VR environments.
 
@@ -518,99 +518,89 @@ Through this first stage of evaluation the Mirrorshades platform has shown itsel
 
 The first stage of evaluation into the Mirrorshades platform led to the conclusion that applying a mobile PR system to a cultural heritage scenario provides an experience that is more enjoyable \& engaging than a traditional virtual heritage scenario making use of immersive VR presentation via CAVE or static HMD, while also leading participants to a greater understanding of the relationships between the RW \& VR content presented to them. While certain drawbacks in the system highlighted by the first stage of evaluation, such as the visual acuity of the video see-through solution \& the lag in the IPS, could not be iterated upon due to lack of suitable technology, other aspects of the system that affect the overall PR experience could be investigated - namely the way that transitions between RW \& VR visual stimuli are performed, including whether the default view is 100\% RW or a mix of RW \& VR, as participants in stage 1 of the evaluation were furnished with only a single style of transition.
 
-Stage 2 of the evaluation was divided into two parts. In the first (stage 2.1), evaluation focussed upon assessing participants' reactions to \& preferences toward three different transition styles, while in the second (stage 2.2), evaluation looked at reactions \& preferences in response to two different default views comprising RW/VR mixes. In terms of the combined Milgram/Waterworh model, this second stage of evaluation pertains to assessing the effect upon participants' focus of attention (\& to a lesser extent, sensus of attention) when performing oscillations along the locus axis using different techniques. Stage 2.1 investigates oscillations where the default view is 100\%, so between the RW extreme of the locus of attention axis \& other points upon the locus axis (such as in figure \ref{transition-rw-vr-hard.png}), while stage 2.2 looks into oscillations where the default view is a mix of RW \& VR, limiting how far toward the RW extreme of the locus axis the participant can reach (such as in figure \ref{transition-mix-vr.png}).
+Stage 2 of the evaluation was divided into two parts. In the first (stage 2.1), evaluation focussed upon assessing participants' reactions to \& preferences toward three different transition styles, while in the second (stage 2.2), evaluation looked at reactions \& preferences in response to two different default views comprising RW/VR mixes. In terms of the combined Milgram/Waterworh model, this second stage of evaluation pertains to assessing the effect upon participants' focus of attention (\& to a lesser extent, sensus of attention) when performing oscillations along the locus axis using different techniques. Stage 2.1 investigates oscillations where the default view is 100\% RW, with participants performing oscillations between the RW extreme of the locus of attention axis \& other points upon the locus axis (such as in figure \ref{transition-rw-vr-hard.png}), while stage 2.2 looks into oscillations where the default view is a mix of RW \& VR, limiting how far toward the RW extreme of the locus axis the participant can reach (such as in figure \ref{transition-mix-vr.png}).
 
-While stage 1 of the evaluation investigated the suitability of applying a mobile PR platform to the particular use case of virtual heritage, stage 2 while still within the same virtual heritage scenario has wider use for informing implementation of PR systems in general \& not just within the context of virtual heritage.
+While stage 1 of the evaluation investigated the suitability of applying a mobile PR platform to the particular use case of virtual heritage, stage 2, while still within the same virtual heritage scenario, has wider use for informing implementation of PR systems in general \& not just within the context of virtual heritage.
 
 %=========================================================================================================
 
 \subsection{Evaluation Techniques}
 
-As with the stage 1 investigation, a range of both qualitative \& quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW \& VR visual stimuli pertains to studying their reactions \& responses to ascertain the effect upon their focus \& sensus of attention, concepts which are largely psychological in nature \& highly subjective~\cite{Ijsselsteijn2001}. Thus, subjective measures will produce the bulk of the data for evaluation, however they will again be backed up by objective log data to support or contradict any relationships that emerge.
+As with the stage 1 investigation, a range of both qualitative \& quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW \& VR visual stimuli pertains to studying their reactions \& responses to ascertain the effect upon their focus of attention, a concept that is largely psychological in nature \& highly subjective~\cite{Ijsselsteijn2001}. Thus, subjective measures will produce the bulk of the data for evaluation, however they will again be backed up by objective log data to support or contradict any relationships that emerge.
 
-Stage 2 participants completed the same pre-task questionnaire as the stage 1 participants \& Likert-type questionnaires that shared certain items with that from stage 1 were also used; the stage 2.1 participants completed a 12-item questionnaire, while stage 2.2 participants completed a 9-item questionnaire. The SUS questionnaire was not used, while post-task interviews \& loggigng were present.
+Stage 2 participants completed the same pre-task questionnaire as the stage 1 participants \& Likert-type questionnaires that shared certain items with that from stage 1 were also used; the stage 2.1 participants completed a 12-item questionnaire (included as appendix \ref{}), while stage 2.2 participants completed a 9-item questionnaire (included as appendix \ref{}). The SUS questionnaire was not used, while post-task interviews \& loggigng were present. In addition to the Likert-type questionnaire, all stage 2 participants also completed the igroup presence questionnaire~\cite{Schubert2001} (IPQ, included as appendix \ref{appendix-igroup-presence-questionnaire}).
 
-%=========================================================================================================
-
-In addition to the Likert-type questionnaire, all stage 2 participants also completed the igroup presence questionnaire~\cite{Schubert2001} (IPQ). Presence does not have a single widely agreed upon definition \& those definitions that are commonly used, including that adopted by this thesis of \textit{the experience of being in one place or environment, even when one is physically situated in another} (see section \ref{lit-review-presencec}), are subjective in nature. Thus attempts to quantify or `measure' the experience of presence are met with difficulty \& many different approaches have been adopted, some more or less suitable to certain scenarios than others. Broadly, these approaches can be categorised as either subjective (most commonly post task questionnaires), behavioural (measurement/observation of actions that do not stem from conscious thought) or physiological (heart rate, skin conductance, etc.)~\cite{Insko2003}.
+As presence does not have a single widely agreed upon definition \& those definitions that are commonly used, including that adopted by this thesis of \textit{the experience of being in one place or environment, even when one is physically situated in another} (see section \ref{lit-review-presencec}), are subjective in nature, attempts to quantify or `measure' the experience of presence are met with difficulty \& many different approaches have been adopted, some more or less suitable to certain scenarios than others. Broadly, these approaches can be categorised as either subjective (most commonly post task questionnaires), behavioural (measurement/observation of actions that do not stem from conscious thought) or physiological (heart rate, skin conductance, etc.)~\cite{Insko2003}.
 
 In this categorisation system, one could consider the log data recorded by the Mirrorshades platform to provide a behavioural insight into the participants' sense of presence \& the interview \& Likert-type questionnaires to provide a subjective insight. For this second stage of evaluation where direct comparison is made between different styles of transition in hopes of ascertaining which result in less pronounced breaks in presence, the use of an established presence questionnaire was deemed a prudent addition to the evaluation techniques to inquire more directly about the sense of presence than the other evaluation techniques.
 
-%=====================
+%=========================================================================================================
 
-Due to the nature of the Mirrorshades platform, most established presence questionnaires could not be directly applied. Established presence questionnaires are predominantly written for application to `traditional' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Framed within an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment \& suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. However considering a PR scenario within the same framework, sensory input from the RW environment that features high spatial equivalence with the VR environment is not incompatible; in fact it should be considered complimentary. Whereas a traditional VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, incompatible with \& suppressing the model of their RW surroundings, PR systems should instead be considered as enhancing the user's existing model of their RW surroundings or as creating a complementary model that sits parallel to it.
+\subsection{Presence Questionnaires}
 
-This distinction is perhaps better explained as a difference in the use of the term `presence', which can be explained using the combined Milgram/Waterworth model. Established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis \& `no sense of presence' means a position toward the RW extreme of the axis. In this stage of the evaluation into the Mirrorshades PR platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme. Instead of assessing allocation of locus of attention between two incompatible sets of environmental stimuli, this stage of evaluation hoped to assess the impact that a locus of attention oscillating between complimentary sets of environmental stimuli has upon focus of attention.
+Due to the nature of the Mirrorshades platform most established presence questionnaires could not be directly applied,  for they are predominantly written for application to `traditional' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Illustrated in reference to an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment \& suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. However considering a PR scenario within the same framework, sensory input from a RW environment that features high spatial equivalence with the VR environment is not incompatible; in fact it should be considered complimentary. Whereas a traditional VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, incompatible with \& suppressing the model of their RW surroundings, PR systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to it.
 
-Many established presence questionnaires that feature wording \& weighting of questions associating negativity to awareness of the stimuli from the RW environment are thus unsuitable for use in assessment of a PR scenario. Whilst this approach is ideal for a traditional VR scenario in which immersion in a VR environment at the complete exclusion of the user's RW environment is the ultimate goal, it does not apply well to a PR scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to transition between both RW \& VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
+This distinction is perhaps best explained as a difference in the use of the term `presence', which can be visualised using the combined Milgram/Waterworth model. Established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis \& `no sense of presence' means a position toward the RW extreme of the axis. In this stage of the evaluation into the Mirrorshades PR platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation hoped to assess the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon focus of attention.
 
-For example, Witmer \& Singer's presence questionnaire~\cite{Witmer1998} poses several questions that directly enquire about aspects of the virtual environment (such as \textit{13. How involved were you in the virtual environment experience?}) but poses no questions that pertain to the RW environment with the sole exception of a single comparison between VR \& RW (\textit{7. How much did your experiences in the virtual environment seem consistent with your real world experiences?}, an assessment of how well bodily actions were represented as possible in the VR environment). Other questionnaires, such as that used in an experiment by Slater \& Steed in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{Please rate your sense of being in the field among the plants}) but also enquiring as to the RW environment in a neutral sense (\textit{During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?}).
+Many established presence questionnaires that feature wording \& weighting of questions associating negativity to awareness of the stimuli from the RW environment are thus unsuitable for use in assessment of a PR scenario. Whilst this approach is ideal for a traditional VR scenario in which immersion in a VR environment at the complete exclusion of the user's RW environment is the ultimate goal, it does not apply well to a PR scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to transition between both RW \& VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is likely beneficial, rather than detrimental, to the overall experience.
 
-The IPQ assesses presence upon three factors; spatial presence (SP), involvement (INV) \& realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment \& REAL questions assess the `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of incompatible sensory input from the RW environment but are not worded in a manner that presents attention paid to this sensory input as negative.
+For example, Witmer \& Singer's presence questionnaire~\cite{Witmer1998} poses several questions that directly enquire about aspects of the virtual environment (such as \textit{``13. How involved were you in the virtual environment experience?''}) but poses no questions that pertain to the RW environment other than a single comparison between VR \& RW (\textit{``7. How much did your experiences in the virtual environment seem consistent with your real world experiences?''}, an assessment of how well bodily actions were represented as possible in the VR environment). Other questionnaires, such as that used in an experiment by Slater \& Steed in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{``Please rate your sense of being in the field among the plants''}) but also enquiring as to the RW environment in a neutral sense (\textit{``During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?''}). However even this still permeates an `either or' implication to the two environments, emphasising their incompatibility \& separateness.
 
+%=========================================================================================================
 
+\subsection{The Igroup Presence Questionnaire}
 
-For a well implemented traditional VR experience that elicits a high sense of presence in the user, one would expect their IPQ results to score highly in all three factors. As discussed by Constantin~\cite{Constantin2003a}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} \& \textit{``felt present''}) \& INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} \& \textit{``fully agree''}) would seem to be tied together, as a high involvement in the RW environment would intuitively reduce spatial presence by hampering the sense that bodily actions as possible in the VR environment.
+The IPQ assesses presence based upon three factors; spatial presence (SP), involvement (INV) \& realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment \& REAL questions assess the `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of incompatible sensory input from the RW environment but are not worded in a manner that presents attention paid to this sensory input as negative (or even such that these stimuli are considered incompatible), reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged.
 
-However, in a PR scenario that features high spatial equivalence this tie between SP \& INV may prove not demonstrate. Due to the spatial equivalence between the two environments, bodily actions in the VR environment are compatible with those in the RW environment, so SP may score highly even when INV scores low as RW sensory input isn't suppressed but in fact encouraged. In fact, it may even be the case that an inverse relationship presents between SP3 \& INV2, as heightened awareness of the RW environment leads the user to feel more comfortable performing bodily actions that are shared with thee VR environment.
+For a well implemented traditional VR experience that elicits a high sense of (virtual) presence in the user, one would expect their IPQ results to score highly in all three factors. As discussed by Constantin~\cite{Constantin2003a}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} \& \textit{``felt present''}) \& INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} \& \textit{``fully agree''}) would seem to be fairly directly tied together, as a high involvement in the RW environment would intuitively reduce spatial presence by hampering the sense that bodily actions are possible in the VR environment.
 
-At the very least one would expect the PR scenarios to present lower INV scores without drastically reducing SP scores, whilst a more optimistic expectation would be for lower INV scores \& \textit{heightened} SP scores.
+However, in a PR scenario that features high spatial equivalence between its constituent RW \& VR environments, this tie between SP \& INV may not demonstrate. Due to the spatial equivalence between the two environments, bodily actions in the VR environment are inherently compatible with those in the RW environment, so SP may score highly even when INV scores low, as RW sensory input isn't suppressed but in fact encouraged. In fact, it may even be the case that an inverse relationship presents between SP3 \& INV2, as heightened awareness of the RW environment leads the user to a more believable representation of bodily actions in the VR enviroonment as possible, increasing SP as (inherently possible) RW bodily actions are shared (`possible') with the VR environment. A restrained expectation would be for a PR scenario to present in general lower INV scores than the traditional scenario but without drastically reducing SP scores, whilst a more optimistic expectation would be for lower INV scores \& \textit{heightened} SP scores - that reinforcement of bodily actions within the RW environment will lead to an increase in experienced spatial presence in the VR environment.
 
+%=========================================================================================================
 
+%there isn't really a mapping from SP/INV/REAL to focus/locus/sensus.
+% INV kinda maps to locus & effects focus
 
+% ***but why didn't we add physiological measures as well?
 
+%=========================================================================================================
 
+\subsection{Design of Scenarios}
 
+Both stages 2.1 \& 2.2 followed a similar pattern to the stage 1 evaluation. Participants first received a `traditional' VR experience by using the DK1 \& Xbox controller to explore the VR chapel while seated \& subsequently completed the IPQ in order to produce baseline IPQ results for a traditional experience of the chapel model viewed via the DK1.
 
+In stage 2.1 the participants then performed two PR scenarios in which they walked through the RW/VR chapels. In the first scenario the default view on the DK1 screen was 100\% RW \& they were granted access to 3x different transition styles;
 
+\begin{enumerate}
+	\item hard switch (see section \ref{sub-hardswitch}) mapped to controller \texttt{[A]} button
+	\item transition with linear interpolation (see section \ref{transition-with-linear-interpolation}) mapped to controller \texttt{[B]} button
+	\item analogue selectable opacity (see section \ref{analogue-selectable-opacity}) mapped to controller right trigger \texttt{[RT]}
+\end{enumerate}
 
+In the second stage 2.1 scenario they were granted access to the same 3x transitions \& additionally a periodic hard switch (see section \ref{subsub-periodic}) was triggered every 3 seconds for a duration of 0.15 seconds.
 
+In stage 2.2, participants again performed two PR scenarios in which they walked through the RW/VR chapels, this time with only a single transition style available (the transition with linear interpolation) but with the default view set at 75\% RW/25\% VR in the first \& at 50\% RW/50\% VR in the second.
 
+Rather than describing a path through the chapel with particular positions of interest to stop \& look around at, participants were simply told to slowly make their way from the starting position down to the altar end of the chapel. For at least one participant in the stage 1 evaluation, their exploration of the environments seemed to be subdued by their adherence to the prescribed route, so in order to promote a more natural style of exploration the route description was not used in the second stage of evaluation.
 
+%=========================================================================================================
 
+\subsection{Stage 2.1 Hypotheses}
 
+It was hypothesized that
 
-***but why didn't we add physiological measures as well?
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+correlation between which type of transition participants favoured \& the situation they were in (walking, standing still, etc.)
 
 
 
 It is hypothesized that a manner of transitioning between visual stimuli which results in a less severe BIP will be preferable to a manner of transitioning which results in a worse BIP. As focus in the Waterworth model is most closely related to presence in the VR literature~\cite{Waterworth2001}, one of the subjective measures that will be used in this evaluation will be an established presence measure, to try to capture the behaviour of the user's position upon the focus axis.
 
 
-
-
-
-After completing the task, participants will respond to the Igroup Presence Questionnaire (IPQ)~\cite{Schubert2001} (see appendix \ref{ipqitems} for the items of the IPQ) which will provide subjective quantitative insight into their experiences with the system, in particular in relation to their position upon the focus axis of the combined model. The IPQ represents a useful questionnaire for evaluation of users' subjective experiences of using the Mirrorshades platform because its terms, especially in the `spatial involvement' scale, question about the RW environment in a manner that does not explicitly present it as a `distraction' from the VR interaction as many other presence questionnaires do.
-
-
-
-Whilst a traditional VR experience would hope to elicit high SP1 \& SP4 results combined with low INV1 \& INV3 results, Mirrorshades participants are expected to report high SP1 \& SP4 combined with \textit{high} INV1 \& INV3. The results from participants in this investigation will be compared against those who partook in a `traditional' VR experience wherein RW stimuli were considered a distraction.
-
-
-%=========================================================================================================
-
-
-
-\subsection{Hypotheses}
 These data are expected to reveal relationships between various different metrics \& the choice of transition methods. For example, it is expected that participants will perform short transitions to VR or transitions to a mix of RW \& VR when moving \& perform longer transitions to VR when stationary. This kind of relationship will support or contradict the subjective data collected through questionnaire \& interview.
 
-\subsection{Stage 2.1 Results}
-
 %=========================================================================================================
+
+\subsection{Stage 2.1 Results}
 
 \clearpage
 
@@ -627,7 +617,7 @@ These data are expected to reveal relationships between various different metric
 
 \clearpage
 
-\subsection{Participant 8}
+\subsubsection{Participant 8}
 
 \begin{figure}[h]
 	\begin{center}
@@ -649,7 +639,7 @@ These data are expected to reveal relationships between various different metric
 
 \clearpage
 
-\subsection{Participant 9}
+\subsubsection{Participant 9}
 
 \begin{figure}[h]
 	\begin{center}
@@ -671,7 +661,7 @@ These data are expected to reveal relationships between various different metric
 
 \clearpage
 
-\subsection{Participant 10}
+\subsubsection{Participant 10}
 
 \begin{figure}[h]
 	\begin{center}
@@ -693,7 +683,7 @@ These data are expected to reveal relationships between various different metric
 
 \clearpage
 
-\subsection{Participant 11}
+\subsubsection{Participant 11}
 
 \begin{figure}[h]
 	\begin{center}
@@ -715,7 +705,7 @@ These data are expected to reveal relationships between various different metric
 
 \clearpage
 
-\subsection{Participant 12}
+\subsubsection{Participant 12}
 
 \begin{figure}[h]
 	\begin{center}
@@ -737,7 +727,7 @@ These data are expected to reveal relationships between various different metric
 
 \clearpage
 
-\subsection{Participant 13}
+\subsubsection{Participant 13}
 
 \begin{figure}[h]
 	\begin{center}
@@ -757,15 +747,25 @@ These data are expected to reveal relationships between various different metric
 
 %=========================================================================================================
 
-\clearpage
-
-\section{Phase 2.2 Results}
+\subsection{Stage 2.1 Conclusions}
 
 %=========================================================================================================
 
 \clearpage
 
-\subsection{Participant 14}
+%=========================================================================================================
+
+\subsection{Stage 2.2 Hypotheses}
+
+%=========================================================================================================
+
+\subsection{Phase 2.2 Results}
+
+%=========================================================================================================
+
+\clearpage
+
+\subsubsection{Participant 14}
 
 \begin{figure}[h]
 	\begin{center}
@@ -787,7 +787,7 @@ These data are expected to reveal relationships between various different metric
 
 \clearpage
 
-\subsection{Participant 15}
+\subsubsection{Participant 15}
 
 \begin{figure}[h]
 	\begin{center}
@@ -809,7 +809,7 @@ These data are expected to reveal relationships between various different metric
 
 \clearpage
 
-\subsection{Participant 16}
+\subsubsection{Participant 16}
 
 \begin{figure}[h]
 	\begin{center}
@@ -831,7 +831,7 @@ These data are expected to reveal relationships between various different metric
 
 \clearpage
 
-\subsection{Participant 17}
+\subsubsection{Participant 17}
 
 \begin{figure}[h]
 	\begin{center}
@@ -848,5 +848,17 @@ These data are expected to reveal relationships between various different metric
 	\caption{Some images, yah.}
 	\end{center}
 \end{figure}
+
+%=========================================================================================================
+
+\subsection{Stage 2.2 Conclusions}
+
+%=========================================================================================================
+
+\subsection{Stage 2 Overall Conclusions}
+
+%=========================================================================================================
+
+\section{Conclusions to Mirrorshades Evaluation Chapter}
 
 %=========================================================================================================
