--- a/thesis.tex
+++ b/thesis.tex
@@ -217,6 +217,10 @@
 \includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/interview-questions-stage-1.pdf}
 \label{appendix-interview-questions-stage-1}
 
+\chapter{Igroup Presence Questionnaire (IPQ)}
+\includepdf[pages={1-4}]{06_mirrorshades_studies_results/PDFs/igroup-presence-questionnaire.pdf}
+\label{appendix-igroup-presence-questionnaire}
+
 \end{appendices}
 
 % ======= ======= ======= ======= ======= ======= =======
